# rust-china-conf

./: Cargo.toml
base/: Cargo.toml
base/src/: types.rs
credit-v1/: Cargo.toml
credit-v1/src/: contract.rs  lib.rs  service.rs  state.rs
credit-v2/: Cargo.toml
credit-v2/src/: abi.rs  contract.rs  contract_impl.rs  contract_inner.rs  instantiation_argument.rs  interfaces.rs  lib.rs  service.rs  state.rs  types.rs
credit-v2/src/contract/: contract_impl.rs  handlers.rs
credit-v2/src/contract/handlers/: errors.rs
credit-v2/src/contract_inner/: errors.rs  handlers.rs
credit-v2/src/contract_inner/handlers/: errors.rs  interfaces.rs  types.rs
credit-v2/src/contract_inner/handlers/operation/: transfer.rs
credit-v2/src/interfaces/: runtime.rs  state.rs
credit-v2/src/interfaces/runtime/: base.rs  contract.rs
credit-v2/src/runtime/: base.rs  contract.rs  errors.rs
credit-v2/src/state/: adapter.rs  errors.rs  state_impl.rs
credit-v2/tests/: single_chain.rs
documentation/: Linera应用优化-V1.md  Linera应用优化-V2.md  Linera应用优化-V3.md  Linera应用优化-V4.md
leaderboard/: Cargo.toml
leaderboard/src/: abi.rs  contract.rs  contract_impl.rs  instantiation_argument.rs  interfaces.rs  lib.rs  service.rs  state.rs
leaderboard/src/contract_inner/: handlers.rs
leaderboard/src/contract_inner/handlers/: errors.rs  interfaces.rs  types.rs
leaderboard/src/contract_inner/handlers/operation/: update_value.rs
leaderboard/src/interfaces/: access_control.rs  runtime.rs  state.rs
leaderboard/src/interfaces/runtime/: base.rs
leaderboard/src/runtime/: contract.rs  errors.rs
leaderboard/src/state/: adapter.rs  errors.rs  state_impl.rs  types.rs
leaderboard/tests/: single_chain.rs
