[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
linera-sdk.workspace = true
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

