[package]
name = "credit-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
linera-sdk.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
bcs.workspace = true
thiserror.workspace = true
log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { workspace = true, features = ["test", "wasmer"] }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "credit_contract"
path = "src/contract.rs"

[[bin]]
name = "credit_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
